# arduino-tuyaopen

./: .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  boards.txt  package.json  package_cn.json  platform.txt  programmers.txt
cores/tuya_open/: Arduino.h  ArduinoMain.cpp  ArduinoMain.h  DsoHack.cpp  Interrupts.cpp  Print.h  SerialUART.cpp  SerialUART.h  StreamString.cpp  StreamString.h  Tone.cpp  WMath.cpp  app_open_sdk.c  arduino_base64.cpp  cbuf.cpp  pgmspace.h  tuya_app_main.c  tuya_arduino_main.cpp  tuya_arduino_version.h  wiring.cpp  wiring_analog.cpp  wiring_digital.cpp
cores/tuya_open/api/: Compat.h  HardwareI2C.h  HardwareSerial.h  IPAddress.cpp  PluggableUSB.cpp  Print.cpp  Print.h  RingBuffer.h  Server.h  Stream.h  String.h  USBAPI.h  WCharacter.h  itoa.h
cores/tuya_open/api/deprecated/: Client.h  HardwareSerial.h  IPAddress.h  Print.h  Stream.h  Udp.h
cores/tuya_open/libb64/: AUTHORS
cores/tuya_open_sdk/: WMath.cpp  cbuf.h  wiring.cpp  wiring_analog.cpp  wiring_shift.cpp
cores/tuya_open_sdk/api/: ArduinoAPI.h  Binary.h  Client.h  Common.cpp  Common.h  HardwareSPI.h  IPAddress.h  Interrupts.h  PluggableUSB.h  Printable.h  Stream.cpp  String.cpp  Udp.h
cores/tuya_open_sdk/api/deprecated/: Printable.h  Server.h  WString.h
libraries/BLE/: library.properties
libraries/BLE/examples/ble_server/: ble_server.ino
libraries/BLE/src/: BLEAdvertising.cpp  BLEAdvertising.h  BLECharacteristic.cpp  BLECharacteristic.h  BLEDEV.cpp  BLEDEV.h  BLEServer.cpp  BLEServer.h  BLEService.cpp  BLEService.h
libraries/DNSServer/: library.properties
libraries/DNSServer/examples/CaptivePortal/: CaptivePortal.ino
libraries/DNSServer/src/: DNSServer.cpp  DNSServer.h
libraries/FS/: library.properties
libraries/FS/src/: file.cpp  file.h  fs_api.h
libraries/HTTPClient/: keywords.txt  library.properties
libraries/HTTPClient/examples/Authorization/: Authorization.ino
libraries/HTTPClient/examples/BasicHttpClient/: BasicHttpClient.ino
libraries/HTTPClient/examples/BasicHttpsClient/: BasicHttpsClient.ino
libraries/HTTPClient/examples/ReuseConnection/: ReuseConnection.ino
libraries/HTTPClient/examples/StreamHttpClient/: StreamHttpClient.ino
libraries/HTTPClient/src/: HTTPClient.cpp  HTTPClient.h
libraries/LittleFS/: keywords.txt  library.properties
libraries/LittleFS/examples/LittleFSDemo/: LittleFSDemo.ino
libraries/LittleFS/src/: LittleFS.cpp  LittleFS.h
libraries/Log/: keywords.txt  library.properties
libraries/Log/src/: Log.cpp  Log.h
libraries/MQTTClient/: keywords.txt  library.properties
libraries/MQTTClient/src/: MQTTClient.cpp  MQTTClient.h
libraries/SPI/: keywords.txt  library.properties
libraries/SPI/src/: SPI.cpp  SPI.h
libraries/Ticker/: keywords.txt  library.properties
libraries/Ticker/src/: Ticker.cpp  Ticker.h
libraries/TuyaIoT/: keywords.txt  library.properties
libraries/TuyaIoT/src/: ArduinoTuyaIoTClient.c  TuyaIoT.cpp  TuyaIoT.h  TuyaIoTWeather.cpp  TuyaIoTWeather.h
libraries/WebSocket/: .codespellrc
libraries/WebSocket/src/: HttpClient.h
libraries/WiFi/: library.properties
libraries/WiFi/src/: WiFi.cpp  WiFi.h  WiFiAP.cpp  WiFiAP.h  WiFiClient.cpp  WiFiClient.h  WiFiGeneric.cpp  WiFiGeneric.h  WiFiMulti.cpp  WiFiMulti.h  WiFiSTA.cpp  WiFiSTA.h  WiFiScan.cpp  WiFiScan.h  WiFiServer.cpp  WiFiServer.h  WiFiType.h  WiFiUdp.cpp  WiFiUdp.h
libraries/WiFiClientSecure/: library.properties
libraries/WiFiClientSecure/src/: WiFiClientSecure.cpp  WiFiClientSecure.h  crt_bundle.c  crt_bundle.h  ssl_client.cpp  ssl_client.h  tls_net.c  tls_rtos.h
libraries/Wire/: keywords.txt  library.properties
libraries/Wire/src/: Wire.cpp  Wire.h
libraries/pubsubclient/: library.properties
libraries/pubsubclient/src/: PubSubClient.cpp  PubSubClient.h
libraries/tuyaIoT/: keywords.txt  library.properties
libraries/tuyaIoT/src/: ArduinoTuyaIoTClient.c  ArduinoTuyaIoTClient.h  tuyaIoT.cpp  tuyaIoT.h
port/t2/: .gitignore  README.md  bk7231n_ota.ld  open_sdk_includes.txt
port/t2/flags/: S_flags.txt  c_flags.txt  combine_flags.txt  cpp_flags.txt  libs.txt  port_includes.txt  vendor_includes.txt
port/t2/script/: FileLock.py  build_open_sdk.py  build_platform.py  build_tkl.py  combine_qio_ate.py  exportBinary.py  extend.py  prebuild.py  prebuild.sh  requirements.txt
port/t2/tools/: t2_ate
port/t3/: bk7236_out.ld  open_sdk_includes.txt
port/t3/flags/: S_flags.txt  appBuildDefine.txt  c_flags.txt  combine_flags.txt  cpp_flags.txt  libs.txt  open_sdk_includes.txt  port_includes.txt  vendor_includes.txt
port/t3/script/: appVersionParse.py  extend.py  prebuild.py  prebuild.sh
port/t5/: bk7258_out.ld  open_sdk_includes.txt
port/t5/flags/: appBuildDefine.txt  c_flags.txt  combine_flags.txt  cpp_flags.txt  libs.txt  port_includes.txt  vendor_includes.txt
port/t5/script/: extend.py
script/: make_boards.py  tuya_open_package.py
tools/: README.md  export_binary.py  objcopy.py  prebuild.py
tools/fileutils/: __init__.py  file_operations.py
tools/packager/: __init__.py  chip_info.py  packager.py  packager_esp32.py  packager_ln882h.py  packager_t2.py  packager_t3_t5.py
tools/sketch_version/: __init__.py  sketch_version.py
variants/esp32/: esp32_hw_port.c  pins_arduino.h
variants/ln882h/: ln882h_hw_port.c  pins_arduino.h
variants/t2/: pins_arduino.h  t2_hw_port.c
variants/t3/: pins_arduino.h  t3_hw_port.c
variants/t5/: pins_arduino.h  project_elf_src.c  t5_hw_port.c
(+50 files in other folders)
